feat: Add 'More info' link, improve mobile layout with dVH units and panel adjustments, and include README acknowledgments.

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
 
             <div class="panel-controls">
                 <button id="start-btn-panel" class="btn-primary">Start Round</button>
+                <a href="https://github.com/kckil/archery-timer" target="_blank" class="info-link">More info</a>
             </div>
         </aside>
 
